dataset1235/2025-2/2868285114/users/1560006455/executions/3649835072_4233865845.log
== SUBMISSION (2025-08-19 22:25:02)
-- CODE: 
temp = float(input("temp. em celsius: "))
F = (temp * 9/5 ) + 32
print(round(F , 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
temp. em celsius: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
temp. em celsius: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
temp. em celsius: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
temp. em celsius: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
temp. em celsius: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
temp. em celsius: 86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:24:29)
-- CODE: 
temp = float(input("temp. em celsius: "))
F = (temp * 9/5 ) + 32
print(round(k , 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(k , 2))
                ^
NameError: name 'k' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(k , 2))
                ^
NameError: name 'k' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(k , 2))
                ^
NameError: name 'k' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(k , 2))
                ^
NameError: name 'k' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(k , 2))
                ^
NameError: name 'k' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(k , 2))
                ^
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:24:53)
-- CODE: 
temp = float(input("temp. em celsius: "))
F = (temp * 9/5 ) + 32
print(round(F , 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
temp. em celsius: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
temp. em celsius: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
temp. em celsius: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
temp. em celsius: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
temp. em celsius: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
temp. em celsius: 86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
